tests/pos/i9992.scala
  import scala.concurrent._

@main def test(): Unit =
  def test = ()
  test
