tests/neg/i19248/Main.scala
@main
def Main(args: String*): Unit =
  ()
